# secure-payslip-downloader

./: .env.example  .gitignore  CRON_SETUP.md  GOOGLE_CLOUD_SETUP.md  README.md  SETUP_WALKTHROUGH.md  TEST_REPORT.md  VALIDATION_CHECKLIST.md  claude_desktop_config_example.json  main.py  pyproject.toml
scripts/: oauth_setup.py  run_scheduled_downloads.py  setup.py  test_scheduler.py
src/: config.py  gmail_client.py  scheduler.py  security.py  server.py
